升级运行脚本